# ochi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  main.py  models.py  ochi.py  pyproject.toml  requirements.txt
ochi/: __init__.py  cli.py  constants.py  fetch.py
ochi/models/: __init__.py  story.py
test/: fetch_test.py
