[tool.poetry]
name = "ochi"
version = "0.0.1"
description = "A simple CLI to read Hacker News in the terminal."
authors = ["daniarlert <arlertdaniel@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
rich = "^12.5.1"
textual = "^0.1.18"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
