[tool.poetry]
name = "ochi"
version = "0.0.1"
description = "A simple CLI to read Hacker News in the terminal."
authors = ["daniarlert <arlertdaniel@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["hacker-news", "hackernews", "cli", "click"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.5.1"
textual = "^0.1.18"
httpx = "^0.23.0"
asyncclick = "^8.1.3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pre-commit = "^2.20.0"
mypy = "^0.982"
isort = "^5.10.1"
black = "^22.8.0"
pytest-asyncio = "^0.19.0"
respx = "^0.20.0"

[tool.black]
skip-string-normalization = 1

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ochi = "ochi.cli:run"

[project.scripts]
ochi = "ochi.cli:run"
